# SelfStudy

./: .gitignore
GMock/: CMakelists.txt
GMock/src/: CMakeLists.txt  MockNameCalc.h  NameCalc.cpp  NameCalc.h  NameCalcStatic.cpp  NameCalcStatic.h  NameCalcTest.cpp  Student.cpp  Student.h  StudentStatic.cpp  StudentStatic.h  StudentTest.cpp  main.cpp
Template/: CMakeLists.txt  CMakeLists.txt.in
Template/src/: CMakeLists.txt  vector.h  vectorTest.cpp
